# midibase

./: .gitignore  Cargo.toml  LICENSE  code_of_conduct.md  config.json  readme.md  start.bat
docs/: events.md
resources/: midibase.psd
src/: command.rs  config.rs  main.rs
src/obs/: api.rs  mod.rs  obs_websocket.rs
src/obs/api/: mod.rs
src/obs/api/audio/: mod.rs  set_audio_mute.rs  toggle_audio_mute.rs
src/obs/api/scene/: mod.rs  scene_item_properties.rs  set_current_scene_request.rs
src/obs/api/stream/: mod.rs  start_stream.rs  stop_stream.rs
src/soundboard/: mod.rs  soundboard.rs
